resources/ConfigMap.yaml
# CONFIG MAP 
Used to store non-sensitive configuration data in key-value pairs. 



---

# ConfigMap as Environment Variable
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: my-container
      image: nginx
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: my-container
      image: nginx
      volumeMounts:
        - name: config-volume
          mountPath: /etc/config  # Mount path inside the container
          readOnly: true
  volumes:
    - name: config-volume
      configMap:
        name: my-config  # Name of the ConfigMap


# ConfigMap for CLI Arguments
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: my-container
      image: nginx
      command: ["sh", "-c", "echo $(CONFIG_KEY1)"]
