resources/Secret.yaml
# SECRET
Secret is used to store sensitive information such as: passwords, OAuth tokens, SSH keys, API keys...
Secrets are encoded in base64 but are not encrypted by default. 

# Secret types: 
#   Opaque: The default type for arbitrary user-defined data.
#   tls: Stores SSL/TLS certificates and keys.
#   docker-registry: Stores Docker credentials for pulling images from private registries.
#   service-account-token: Automatically created for Kubernetes service accounts.

# Usage of secrets:
#   Environment Variables: Secrets can be injected into Pods as environment variables.
#   Volume Mounts: Secrets can be mounted into Pods as files on the filesystem.
#   Image Pull Secrets: Secrets can be used to pull private container images.

# Decode value from secret:
#   echo 'YWRtaW4=' | base64 --decode

---

# Secrets as Environment Variables
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: my-container
      image: nginx
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: my-container
      image: nginx
      volumeMounts:
        - name: secret-volume
          mountPath: "/etc/secrets"  # Mount the Secret to this path
          readOnly: true
  volumes:
    - name: secret-volume
      secret:
        secretName: my-secret  # Name of the Secret
# 2 files will be creates at /etc/secrets directory
# /etc/secrets/username: Contains the base64-decoded value of the username key.
# /etc/secrets/password: Contains the base64-decoded value of the password key.


# Example TLS Secret
apiVersion: v1
kind: Secret
metadata:
  name: my-tls-secret
type: kubernetes.io/tls  # Specific type for TLS secrets
data:
  tls.crt: <base64-encoded-cert>   # Base64-encoded TLS certificate
  tls.key: <base64-encoded-key>    # Base64-encoded private key


# Example Docker Registry Secret
apiVersion: v1
kind: Secret
metadata:
  name: my-docker-secret
type: kubernetes.io/dockerconfigjson  # Type for Docker registry secrets
data:
  .dockerconfigjson: <base64-encoded-docker-config>
