resources/ServiceAccount.yaml
# SERVICE ACCOUNT 
ServiceAccount is an identity used by Pods to interact with Kubernetes API. 
It provides mechanism for Pods to authenticate/authorize their requests to API server. 
Each SA has credentials (usually in form of a token) that allow it to perform certain operations.

Key features: 
  - Pod Authentication: SA allows Pods to authenticate when interacting with Kubernetes API 
    By default every Pod runs with default SA in it's namespace. 
  - RBAC control over what SA is allowed to do
  - Automatic Token Mounting: Kubernetes automatically mounts a token for the SA in Pods filesystem.
  - Namespace Scope: SA are namespace-scoped 

Tokens are mounted inside Pods at: /var/run/secrets/kubernetes.io/serviceaccount
Every namespace comes with default SA named default. 

---

# apiVersion and kind: The API version is v1, and the resource type is ServiceAccount.
# metadata.name: Specifies the name of the ServiceAccount (my-service-account).
# metadata.namespace: Defines the namespace where the ServiceAccount exists. ServiceAccounts are namespace-scoped, meaning they only exist within the namespace they are created in.

---

# Using ServiceAccount in a Pod with disabled automounting
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  serviceAccountName: my-service-account
  automountServiceAccountToken: false  # Disable auto-mounting of ServiceAccount token
  containers:
  - name: my-container
    image: nginx
